Revision history for Perl module XML::RSS
 
1.41 - December 4, 2008    
    - Made the default keys for the channel link, description and title undef 
    instead of ''. They become '' once they are opened.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686
    - Now keeping track of rdf:resource of <image> in RSS 1.0:
        - http://rt.cpan.org/Ticket/Display.html?id=3978
    - Made sure that channel/{link,description,title} are localized to
    the empty string before rendering, to allow for better backwards
    compatibility.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686    

1.40 - December 1, 2008
    - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
    properly.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978
    - Now parsing multiple <category>'ies inside an <item> into an
    array-reference.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Now outputting an arayref of <item>/<category> prpoerly.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Parsing multiple <channel>/<category> into arrays.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Rendering multiple <channel>/<category> elements from array refs.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Now parsing multiple dc:items into an array 
    reference (at least inside an <item>):
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Added the modules_as_arrays option to parse repeatable module elements
    into an array ref.
        

1.38 - November 27, 2008
    - Added support for duplicate items of RSS modules.
        - http://rt.cpan.org/Public/Bug/Display.html?id=4495
    - Added support for multiple Dublin Core elements. One can point
    the field to an array and it will create multiple elements:
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Now parsing several <skipDays>/<day>s and <skipHours>/<hour>s into