@@ -1,5 +1,10 @@
 Revision history for Perl module XML::RSS
  
+    
+    - When transforming elements with attributes into hash-refs - make
+    sure they are placed in the correct namespace. Previously 
+    <media:description> over-rided the plain <description>. (as in Flickr).
+
 1.41 - December 4, 2008    
     - Made the default keys for the channel link, description and title undef 
     instead of ''. They become '' once they are opened.
